# cerrlib

./: .gitignore  HISTORY.md  LICENCE  README.md  ROADMAP.md  SUPPORT.md  pyproject.toml
src/cerrlib/: __init__.py  input_exceptions.py  numeric_exceptions.py  string_exceptions.py  type_exceptions.py
